--- a/Forntend/angular.json
+++ b/Forntend/angular.json
@@ -118,6 +118,10 @@
               "devServerTarget": "HSPA:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
